<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_page"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <!-- Background color selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <RadioGroup
            android:id="@+id/color_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/red_button">

            <RadioButton
                android:id="@+id/red_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"/>

            <RadioButton
                android:id="@+id/blue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>

            <RadioButton
                android:id="@+id/green_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>

        </RadioGroup>

        <!-- Display location toggle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_location"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <Switch
            android:id="@+id/location_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

</LinearLayout>